@@ -32,10 +32,10 @@ struct starling_streams : public starling_streams_base
     typedef starling_streams_base base_t;
 
     starling_streams(
-            const starling_options& opt,
-            const prog_info& pinfo,
-            const std::vector<std::reference_wrapper<const bam_hdr_t>>& bamHeaders,
-            const std::vector<std::string>& sampleNames);
+        const starling_options& opt,
+        const prog_info& pinfo,
+        const std::vector<std::reference_wrapper<const bam_hdr_t>>& bamHeaders,
+        const std::vector<std::string>& sampleNames);
 
     std::ostream&
     gvcfSampleStream(const unsigned sampleIndex) const
